<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--Burada image view click edende image api gedecek-->

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="158dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/detailArtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Art Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/detailArtistName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artImageView" />
    <EditText
        android:id="@+id/detailArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Artist Name "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailArtName" />

    <EditText
        android:id="@+id/detailYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailArtistName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="49dp"
        android:text="Save"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailYear" />
</androidx.constraintlayout.widget.ConstraintLayout>